fix(archlinux): downgrade to cattrs 1.0.0

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -78,7 +78,7 @@ airflow:
         - argcomplete
         - attrs
         - cached_property
-        - cattrs
+        - cattrs:1.0.0
 
         # https://github.com/mher/flower/issues/1029
         # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
