--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -23,20 +23,34 @@ postgres:
     - ['host', 'replication', 'all', '::1/128', 'md5']
 
 airflow:
+  security:
+    airflow:
+      user: airflow
+      pass: airflow
+      email: airflow@localhost
+      script: {{ range(1,200000) | random }}.py
   config:
     airflow:
+      path: /home/airflow/airflow
       file: airflow.cfg
       content:
-        dags_folder: /home/airflow/airflow/dags
-        base_log_folder: /home/airflow/airflow/logs
-        executor: LocalExecutor
-        # Localhost services
-        # https://stackoverflow.com/questions/45455342
-        sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
-        # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
-        broker_url: redis://127.0.0.1:6379/0
-        result_backend: db+postgresql://airflow:airflow@127.0.0.1/airflow
-        default_timezone: system
+        core:
+          dags_folder: /home/airflow/airflow/dags
+          base_log_folder: /home/airflow/airflow/logs
+          executor: LocalExecutor
+          default_timezone: system
+          # https://stackoverflow.com/questions/45455342
+          sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
+        webserver:
+          authenticate: true
+          auth_backend: airflow.contrib.auth.backends.password_auth  # airflow.api.auth.backend.deny_all
+        celery:
+          # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
+          broker_url: redis://127.0.0.1:6379/0
+          result_backend: db+postgresql://airflow:airflow@127.0.0.1/airflow
+      state_colors: {}
+      # https://airflow.apache.org/docs/apache-airflow/stable/howto/customize-state-colors-ui.html
+
   environ:
     airflow:
       file: airflow
@@ -62,7 +76,6 @@ airflow:
         - airflow
       uri_a: https://github.com/apache/airflow/releases/download
       uri_c: https://raw.githubusercontent.com/apache/airflow/constraints-VERSION/constraints-PYVER.txt
-      path: /home/airflow/airflow
       archive:
         options: '--strip-components=1'
       suffix: tar.gz
@@ -71,12 +84,18 @@ airflow:
         - celery
         - postgres
         - google
-        - microsoft.azure
+        - password
+        - devel_ci
+        - devel_azure
       pips:
         # for functionality
         - cryptography
         - mysqlclient
-        - mysql-python
+        - snowflake-connector-python>=2.3.6
+        - password
+        - mysql-connector
+        - attr
+        - flask_oauthlib
         # from airflow's setup.py
         - alembic
         - argcomplete
@@ -95,7 +114,6 @@ airflow:
         - enum34
         - flask
         - flask-admin
-        - flask-appbuilder
         - flask-appbuilder
         - flask-caching
         - flask-login
