--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -96,6 +96,7 @@ airflow:
         - mysql-connector
         - attr
         - flask_oauthlib
+        - great_expectations
         # from airflow's setup.py
         - alembic
         - argcomplete
