fix(postgres): add psycopg2 package to defaults

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -97,6 +97,7 @@ airflow:
         - attr
         - flask_oauthlib
         - great_expectations
+        - psycopg2
         # from airflow's setup.py
         - alembic
         - argcomplete
