--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -41,6 +41,7 @@ airflow:
           default_timezone: system
           # https://stackoverflow.com/questions/45455342
           sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
+          load_examples: False
         webserver:
           authenticate: true
           auth_backend: airflow.contrib.auth.backends.password_auth  # airflow.api.auth.backend.deny_all
