fix(initdb): support airflow 2.0 syntax

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -12,6 +12,7 @@ airflow:
     airflow:
       path: /home/airflow/airflow
       file: airflow.cfg
+      initcmd: 'db init'
       content:
         core:
           dags_folder: /home/airflow/airflow/dags
