--- a/pillar.example
+++ b/pillar.example
@@ -49,10 +49,10 @@ airflow:
   service:
     airflow:
       enabled:
-        - airflow-flower
+        - airflow-celery-flower
         - airflow-scheduler
         - airflow-webserver
-        - airflow-worker
+        - airflow-celery-worker
   pkg:
     airflow:
       version: 2.0.0rc1  # 1.10.14
