--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -17,7 +17,7 @@ airflow:
         core:
           dags_folder: /home/airflow/airflow/dags
           base_log_folder: /home/airflow/airflow/logs
-          executor: LocalExecutor
+          executor: CeleryExecutor
           default_timezone: system
           # https://stackoverflow.com/questions/45455342
           sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
@@ -25,7 +25,8 @@ airflow:
         webserver:
           authenticate: true
           secret_key: {{ range(1,200000) | random }}
-          auth_backend: airflow.contrib.auth.backends.password_auth  # airflow.api.auth.backend.deny_all
+          auth_backend: airflow.contrib.auth.backends.password_auth
+          cookie_samesite: None
         celery:
           # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
           broker_url: redis://127.0.0.1:6379/0
