--- a/airflow/osfamilymap.yaml
+++ b/airflow/osfamilymap.yaml
@@ -100,6 +100,8 @@ RedHat:
         # for funtionality
         - mariadb-devel
         - krb5-devel
+        - graphviz   # save dag structure as image
+
 Suse:
   pkg:
     airflow:
